# lead-combinator

./: .gitignore
lead_combinator/back/: .gitignore  pyproject.toml
lead_combinator/back/back/: main.py
lead_combinator/back/back/app/services/: krs.py  utils.py  verif.py
lead_combinator/back/tests/: test_scrape_krs.py
lead_combinator/backend/: .gitignore  pyproject.toml
lead_combinator/backend/app/: main.py
lead_combinator/backend/app/services/: openai_service.py
lead_combinator/backend/app/services/business_retriever/pl/: krs.py  verif.py
lead_combinator/backend/app/utils/: function_to_jsonschema.py
lead_combinator/backend/hooks/: openai_functions.py
