[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Kris Konina <kris.kavalieri@kappados.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.12.0"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
tenacity = "^8.2.3"
requests = "^2.31.0"
orjson = "^3.9.15"
cysimdjson = "^23.8"
pysimdjson = "^6.0.2"
aiofiles = "^23.2.1"
aiohttp = "^3.9.3"
tabulate = "^0.9.0"
pytest = "^8.1.1"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.5.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
